@@ -55,6 +55,7 @@ flags to change program behavior.  Supported flags in v1.19 are:
 -vproc			Increase verbosity of processor detection code on startup
 -noecm			Set this flag to skip all ECM stages in the factor() function and instead
 				proceed directly to QS/NFS after small factor detection.
+-one		Tells factor() to stop factoring after finding one factor.
 -ggnfs_dir <path>	path to ggnfs binaries
 
 These flags are ignored when redirecting input to yafu.
